--- a/boulder_circle01.html
+++ b/boulder_circle01.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>bouldering_circle_shake</title>
-        <link rel="style01" href="style01.css">
+        <link rel="style01" type="text/css"　href="style01.css">
     </head>
     
     <header>
